--- a/style.css
+++ b/style.css
@@ -1,3 +1,82 @@
-h1, p {
-  font-family: Lato;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container {
+  width: 80vw;
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  border: solid 3px gray;
+  background-color: #ffffff55;
+}
+.question {
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: blueviolet;
+  text-shadow: 1px 2px 1px rgba(37, 9, 37, 0.5);
+  padding: 10px 0 10px 30px;
+  background-color: #ffffff55;
+  border-bottom: solid 2px blueviolet;
+}
+ul {
+  list-style: none;
+  margin: 20px;
+}
+ul li {
+  padding: 5px 0;
+  font-size: 20px;
+}
+
+ul label {
+  padding-left: 10px;
+}
+
+.submit,
+.next {
+  width: 100px;
+  padding: 10px 5px;
+
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: blueviolet;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  transition: all ease 0.2s;
+}
+.submit {
+  margin: 0 auto;
+}
+.next {
+  margin-left: auto;
+}
+.submit:hover,
+.next:hover {
+  cursor: pointer;
+  background-color: rgb(92, 23, 133);
+}
+
+.info {
+  width: 95%;
+  height: 35px;
+  font-size: 16px;
+  color: #fff;
+  line-height: 35px;
+  padding-left: 15px;
+  margin: 20px auto;
+  background-color: rgb(48, 48, 48);
+  border-radius: 25px;
 }
