--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ ul label {
 
 .submit,
 .next {
-  width: 100px;
+  min-width: 100px;
   padding: 10px 5px;
   display: block;
   font-size: 14px;
@@ -76,10 +76,10 @@ ul label {
 .info {
   width: 95%;
   height: 35px;
-  font-size: 18px;
+  font-size: 20px;
   text-align: center;
   color: #000;
-  line-height: 35px;
+  line-height: 20px;
   padding-left: 15px;
   margin: 20px auto;
 }
